--- a/index.html
+++ b/index.html
@@ -217,10 +217,10 @@
 								<ul class="no-style">
 									
 										
-										<img src="images/11.Jpg"  />
-										<img src="images/121.Jpg"  />
-										<img src="images/1213.Jpg"  />
-										<img src="images/124.Jpg"  />
+										<img src="images/11.JPG"  />
+										<img src="images/121.JPG"  />
+										<img src="images/1213.JPG"  />
+										<img src="images/124.JPG"  />
 										<br>
 										А также:	
 										<li>
