--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		<script type="text/javascript" src="js/jquery.form.js"></script>
 	</head>
 	<body>
-		<a href id="sneg" class="button-large"><span>Выключить снег</span></a>
+		<a href="http://pix.playground.ru/other/8975/" id="sneg" class="button-large"><span>Выключить снег</span></a>
 		<!--<div id="wrapper">
 			<div id="container">
 				<div id="bg-container">
